Fix css vars in dark mode

--- a/src/sass/modulos/_global.sass
+++ b/src/sass/modulos/_global.sass
@@ -24,6 +24,10 @@ body
 	--primary-color-lighter: #{$white-lighten-1}
 	--secondary-color-light: #{$white-lighten-2}
 	--secondary-color-lighter: #{$white-lighten-1}
+	--form-ui-color-2: #{$white-lighten-2}
+	--form-ui-color-3: #{$white-lighten-1}
+	--table-ui-color-2: #{$white-lighten-2}
+	--table-ui-color-3: #{$white-lighten-1}
 	color: var(--font-color-2)
 	h1,h2,h3,h4,h5,h6
 		color: inherit
